# poo2_pc1_2021_0_template

./: CMakeLists.txt  README.md  cppcheck.cpp  filter.h  generate_zip.sh  global.h  main.cpp  p1.cpp  p1.h  p2.cpp  p2.h  p3.cpp  p3.h  polynomial.cpp  polynomial.h  run.sh  standard_deviation.h  test_1.cpp  test_1.in  test_1_1.cpp  test_1_1.in  test_1_2.cpp  test_1_2.in  test_1_3.cpp  test_1_3.in  test_1_4.cpp  test_1_4.in  test_2.cpp  test_2.in  test_2_1.cpp  test_2_1.in  test_2_2.cpp  test_2_2.in  test_2_3.cpp  test_2_4.cpp  test_3.cpp  test_3_1.cpp  test_3_1.in  test_3_2.cpp  test_3_2.in  (+4 more)
